feat(store): added id constructor to entities to allows mapstruct to map correctly
feat(store): created RoleAssignment Repository and EntityAdapter

refactor(commons-security): removed redundant Auth Whitelist